# rbc-2026

./: .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.yml  go.mod  info.json  nginx.conf
cmd/api/: main.go
deploy/nginx/: nginx.conf
internal/detector/: ann.go  detector.go  knn.go  loader.go  vectorizer.go
internal/handlers/: fraud_score.go  ready.go  routes.go
internal/models/: fraud.go
notebooks/: ivf_optimization.ipynb  pyproject.toml
scripts/: show-results.py  submit
test/: load-test.js  test-data.json
