[project]
name = "notebooks"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29",
    "ijson>=3.2",
    "matplotlib>=3.8",
    "nbformat>=4.2",
    "numpy>=1.26",
    "optuna>=4.0",
    "pandas>=2.2",
    "plotly>=5.18",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "umap-learn>=0.5",
]
